# buildtools-assistant

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: adoptium.rs  main.rs  mojang.rs  os.rs  spigot.rs
