[package]
name = "buildtools-assistant"
version = "1.1.0"
description = "A cross-platform CLI tool to easily run Spigot's BuildTools for one or more versions simultaneously, without the Java version mess."
categories = ["command-line-utilities"]
repository = "https://github.com/Insprill/buildtools-assistant"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
flate2 = "1.0.25"
futures = "0.3.27"
itertools = "0.10.5"
log = "0.4.17"
platform-dirs = "0.3.0"
rand = "0.8.5"
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
simplelog = "0.12.1"
sysinfo = { version = "0.28.4", default-features = false }
tar = "0.4.38"
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
zip-extract = { version = "0.1.2", features = ["deflate"], default-features = false }

[profile.release]
strip = true
lto = true
