[package]
name = "buildtools-assistant"
version = "1.1.1"
description = "A cross-platform CLI tool to easily run Spigot's BuildTools for one or more versions simultaneously, without the Java version mess."
categories = ["command-line-utilities"]
repository = "https://github.com/Insprill/buildtools-assistant"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
flate2 = "1.0.28"
futures = "0.3.29"
itertools = "0.12.0"
log = "0.4.20"
platform-dirs = "0.3.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
simplelog = "0.12.1"
sysinfo = { version = "0.29.11", default-features = false }
tar = "0.4.40"
tokio = { version = "1.35.0", features = ["rt-multi-thread"] }
zip-extract = { version = "0.1.2", features = ["deflate"], default-features = false }

[profile.release]
strip = true
lto = true
