[package]
name = "buildtools-assistant"
version = "1.1.1"
description = "A cross-platform CLI tool to easily run Spigot's BuildTools for one or more versions simultaneously, without the Java version mess."
categories = ["command-line-utilities"]
repository = "https://github.com/Insprill/buildtools-assistant"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
futures = "0.3"
itertools = "0.12"
log = "0.4"
platform-dirs = "0.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
sysinfo = { version = "0.30", default-features = false }
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
zip-extract = { version = "0.1", features = ["deflate"], default-features = false }

[profile.release]
strip = true
lto = true
